# quality-data-pipelines

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
data/: february-2024.csv  january-2024.csv  march-2024.csv
notebooks/: great_expectations-skeleton.ipynb  great_expectations-solution.ipynb  great_expectations.ipynb  super-business-critical-notebook.ipynb
quality_data_pipelines/: assets.py  data_functions.py  definitions.py
solution/: definitions.py
