[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
readme = "README.md"
packages = [{include = "quality_data_pipelines"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "^6.29.5"
dagster = "^1.8.2"
great-expectations = "^1.0.0"
xlsxwriter = "^3.2.0"

[tool.dagster]
module_name = "quality_data_pipelines.definitions"
code_location_name = "quality_data_pipelines"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"