[tool.poetry]
name = "quality-data-pipelines"
version = "0.1.0"
description = ""
authors = ["Jaymin Mistry"]
readme = "README.md"
packages = [{include = "quality_data_pipelines"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "^6.29.5"
dagster = "^1.8.2"
dagster-webserver = "^1.8.2"
dagster-ge = "^0.24.4"
great-expectations = "*"
xlsxwriter = "^3.2.0"
jinja2 = "^3.0.3"
pytest = "^8.3.2"

[tool.dagster]
module_name = "quality_data_pipelines.definitions"
code_location_name = "quality_data_pipelines"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
